--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -15,8 +15,9 @@
   </p>
 
   <p>
-    <strong>Password digest:</strong>
-    <%= user.password_digest %>
+    <strong>Current Password: </strong><span class="text-danger">ENCRYPTED</span>
+    <!-- Remove the equal sign from the line below or remove the line completely -->
+    <% user.password_digest %>
   </p>
 
   <p>
