--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,37 +11,45 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :fname, style: "display: block" %>
-    <%= form.text_field :fname %>
+
+  <div class="form-group" style="padding-bottom: 10px;">
+    <!-- <%= form.label :fname, style: "display: block" %> -->
+    <%= form.text_field :fname, placeholder: 'First Name', class: 'form-control' %>
+  </div>
+
+
+
+  <div class="form-group" style="padding-bottom: 10px;">
+    <!-- <%= form.label :lname, style: "display: block" %> -->
+    <%= form.text_field :lname, placeholder: 'Last Name', class: 'form-control' %>
+  </div>
+
+  <div class="form-group" style="padding-bottom: 10px;">
+    <!-- <%= form.label :email, style: "display: block" %> -->
+    <%= form.text_field :email, placeholder: 'Email Address', class: 'form-control' %>
+  </div>
+
+  <div class="form-group" style="padding-bottom: 10px;">
+    <!-- <%= form.label :password_digest, style: "display: block" %> -->
+    <%= form.password_field :password, placeholder: 'Choose a strong password', class: 'form-control' %>
   </div>
 
   <div>
-    <%= form.label :lname, style: "display: block" %>
-    <%= form.text_field :lname %>
-  </div>
-
-  <div>
-    <%= form.label :email, style: "display: block" %>
-    <%= form.text_field :email %>
-  </div>
-
-  <div>
-    <%= form.label :password_digest, style: "display: block" %>
-    <%= form.text_field :password_digest %>
-  </div>
-
-  <div>
+    <!--
     <%= form.label :is_admin, style: "display: block" %>
-    <%= form.checkbox :is_admin %>
+    <%= form.check_box :is_admin %> -->
+    <%= form.hidden_field :is_admin, value: false %>
   </div>
 
   <div>
+    <!--
     <%= form.label :status, style: "display: block" %>
-    <%= form.text_field :status %>
+    <%= form.text_field :status %> -->
+    <%= form.hidden_field :status, value: "Active" %>
   </div>
 
   <div>
-    <%= form.submit %>
+    <!-- <%= form.submit %> -->
+    <%= form.submit 'Submit', class: 'btn btn-primary' %>
   </div>
 <% end %>
