--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,8 @@
-<% content_for :title, "Editing user" %>
-
-<h1>Editing user</h1>
-
+<div style="padding-top: 10px;">
+  <h3>Update User Details</h3>
+</div>
 <%= render "form", user: @user %>
-
-<br>
-
-<div>
+<div style="padding-top: 10px;">
   <%= link_to "Show this user", @user %> |
   <%= link_to "Back to users", users_path %>
-</div>
+</div>  
