--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,10 @@
 <% content_for :title, "New user" %>
 
-<h1>New user</h1>
-
+<h4 style="padding-top:10px;">Sign up for an account - it's free!</h4>
 <%= render "form", user: @user %>
-
+<!--
 <br>
-
 <div>
   <%= link_to "Back to users", users_path %>
 </div>
+-->
