--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,8 @@
 <div>
   <%= link_to "Edit this user", edit_user_path(@user) %> |
   <%= link_to "Back to users", users_path %>
+<div style="padding-top: 20px;">
+  <%= button_to "Delete Account", @user, method: :delete, class: 'btn btn-danger' %>
+</div>
 
-  <%= button_to "Destroy this user", @user, method: :delete %>
 </div>
