--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,38 +16,55 @@
         <li class="nav-item">
         <%= link_to "About", about_path, class:"nav-link" %>
         </li>
-        <li class="nav-item">
-        <li><%= link_to 'Sign Up', new_user_path, class:"nav-link" %></li>
 
-        </li>
-        <li class="nav-item">
-        <li><a class="nav-link" href="#">Sign In</a></li>
-        </li>
-        <li class="nav-item">
-        <li><a class="nav-link" href="#">Sign Out</a></li>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            User
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">My Account</a></li>
-            <li><a class="dropdown-item" href="#">My Recipes</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Add New Recipe</a></li>
-          </ul>
-        </li>
+        <!-- Sign Up link: -->
+        <% if !logged_in? %>
+          <li class="nav-item">
+          <li><%= link_to 'Sign Up', new_user_path, class:"nav-link" %></li>
+          </li>
+        <% end %>
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Admin
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Admin Home</a></li>
-            <li><%= link_to 'Manage Users', users_path, class:"dropdown-item" %></li>
+        <!-- Sign In link: -->
+        <% if !logged_in? %>
+          <li class="nav-item">
+          <li><%= link_to 'Sign In', login_path, class:"nav-link" %></li>
+          </li>
+        <% end %>
 
-          </ul>
-        </li>
+        <!-- Sign Out link: -->
+        <% if logged_in? %>
+          <li class="nav-item">
+          <%= button_to "Sign Out", logout_path, method: :delete, class:"btn btn-link nav-link" %>
+          </li>
+        <% end %>
+
+        <!-- User Drop Menu: -->
+        <% if logged_in? && !is_administrator? %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              User
+            </a>
+            <ul class="dropdown-menu">
+              <%= link_to "My Account", userhome_path, class:"dropdown-item" %>
+              <%= link_to "My Recipes", your_recipes_path, class:"dropdown-item" %>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Add New Recipe</a></li>
+            </ul>
+          </li>
+        <% end %>
+
+        <!-- Admin Drop Menu: -->
+        <% if logged_in? && is_administrator? %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Admin</a>
+            <ul class="dropdown-menu">
+            <%= link_to "Admin Home", admin_path, class:"dropdown-item" %>
+              <li><%= link_to 'Manage Users', users_path, class:"dropdown-item" %></li>
+            </ul>
+          </li>
+        <% end %>
+
+        
 
         <!--
         <li class="nav-item">
